# agent-flow

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
client/: example_agent.py  sessionbus_client.py
sessionbus/: __init__.py  api.py  db.py  hub.py  launch.py  main.py  mcp_service.py  models.py  schemas.py
sessionbus/services/: events.py  inbox.py  notifications.py  requests.py  sessions.py
sessionbus/static/: app.css  app.js
sessionbus/templates/: index.html  layout.html  request.html
tests/: test_api.py
